--- a/public/index.html
+++ b/public/index.html
@@ -9,40 +9,39 @@
       name="description"
       content="Web site created using create-react-app"
     />
-   <style>
-    @font-face {
-      font-family: 'Source pro';
-      src: url('./fonts/SourceSansPro-Regular.ttf');
-    }
-    @font-face {
-      font-family: 'Source pro';
-      font-weight: bold;
-      src: url('./fonts/SourceSansPro-Bold.ttf');
-    }
-    @font-face {
-      font-family: 'Source pro';
-      font-weight: 100;
-      src: url('./fonts/SourceSansPro-ExtraLight.ttf');
-    }
-    @font-face {
-      font-family: 'Source pro';
-      font-weight: 300;
-      src: url('./fonts/SourceSansPro-Light.ttf');
-    }
-    @font-face {
-      font-family: 'Source pro';
-      font-weight: 500;
-      src: url('./fonts/GingerBold.ttf');
-    }
-    *{
-      font-family: 'Source Pro';
-    }
-   </style>
+    <style>
+      @font-face {
+        font-family: "Source pro";
+        src: url("./fonts/SourceSansPro-Regular.ttf") format("ttf");
+      }
+      @font-face {
+        font-family: "Source pro";
+        font-weight: bold;
+        src: url("./fonts/SourceSansPro-Bold.ttf") format("ttf");
+      }
+      @font-face {
+        font-family: "Source pro";
+        font-weight: 100;
+        src: url("./fonts/SourceSansPro-ExtraLight.ttf") format("ttf");
+      }
+      @font-face {
+        font-family: "Source pro";
+        font-weight: 300;
+        src: url("./fonts/SourceSansPro-Light.ttf") format("ttf");
+      }
+      @font-face {
+        font-family: "Open sans";
+        font-weight: 500;
+        src: url("./fonts/OpenSans-Medium.ttf") format("ttf");
+      }
+      * {
+        font-family: "Source Pro";
+      }
+    </style>
     <title>PharmEasy BD</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  
   </body>
 </html>
